--- a/packages/bruce-util/package.json
+++ b/packages/bruce-util/package.json
@@ -38,10 +38,13 @@
 		"url": "https://github.com/JowayYoung/bruce.git"
 	},
 	"license": "MIT",
-	"main": "index.js",
+	"main": "dist/web.js",
+	"module": "dist/web.esm.js",
+	"browser": "dist/web.umd.js",
 	"scripts": {
 		"build": "rollup -c",
-		"remove": "rimraf node_modules package-lock.json yarn.lock"
+		"remove": "rimraf node_modules package-lock.json yarn.lock",
+		"test": "node dist/test.js"
 	},
 	"dependencies": {
 		"copy-dir": "1.3.0",
