--- a/packages/bruce-ui/package.json
+++ b/packages/bruce-ui/package.json
@@ -29,14 +29,15 @@
 	"browser": "dist/index.umd.js",
 	"scripts": {
 		"build": "rollup -c",
-		"remove": "rimraf node_modules package-lock.json yarn.lock"
+		"remove": "rimraf node_modules package-lock.json yarn.lock",
+		"test": "cd dist && http-server -p 9999"
 	},
 	"dependencies": {
 		"@bruce/util": "../bruce-util",
 		"classnames": "2.3.1",
 		"prop-types": "15.7.2",
-		"react-dom": "17.0.2",
-		"react": "17.0.2"
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
 	},
 	"devDependencies": {
 		"@babel/core": "7.13.14",
