更新组件库和工具库描述

--- a/packages/bruce-ui/package.json
+++ b/packages/bruce-ui/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@bruce/ui",
 	"version": "0.0.1",
-	"description": "A front-end general UI component library",
+	"description": "A React General UI Component Library",
 	"keywords": [
 		"@bruce/ui",
 		"bruce",
