--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,6 @@ jobs: # 任务
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          ACCESS_TOKEN: ${{secrets.DOCS}}
-          BRANCH: gh-pages # 打包完毕部署的分支
-          FOLDER: dist # 打包文件位置
+          github_token: ${{ secrets.DOCS }}
+          publish_branch: gh-pages # 打包完毕部署的分支
+          publish_dir: dist # 打包文件位置
