--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,6 @@ jobs: # 任务
       # 拉取代码
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          persist-credentials: false # 使用actions/checkout@v2在大多数情况下必须将持久凭证设置为false才能使部署正确工作
       # 打包文件
       - name: Build
         run: yarn && yarn run docs:build
@@ -24,4 +22,4 @@ jobs: # 任务
         with:
           github_token: ${{ secrets.DOCS }}
           publish_branch: gh-pages # 打包完毕部署的分支
-          publish_dir: ./root # 打包文件位置
+          publish_dir: root # 打包文件位置
