--- a/.github/workflows/cbd.yml
+++ b/.github/workflows/cbd.yml
@@ -1,4 +1,4 @@
-name: Generate Document # 动作名称
+name: CBD # 动作名称
 
 on: # 触发条件：在push到main分支后
   push:
@@ -21,4 +21,4 @@ jobs: # 任务
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./root # 打包文件位置
+          publish_dir: ./dist # 打包文件位置
