--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
 		"type": "git",
 		"url": "https://github.com/JowayYoung/bruce.git"
 	},
+	"private": true,
 	"license": "MIT",
 	"main": "dist/index.js",
 	"jsnext:main": "dist/index.js",
