--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -64,7 +64,7 @@
 		"@babel/preset-react": "7.16.7",
 		"@babel/preset-typescript": "7.16.7",
 		"@babel/runtime-corejs3": "7.17.2",
-		"@bruce/us": "^1.0.0",
+		"@bruce/us": "1.0.0",
 		"@soda/friendly-errors-webpack-plugin": "1.8.1",
 		"@typescript-eslint/eslint-plugin": "5.12.1",
 		"@typescript-eslint/parser": "5.12.1",
