--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -68,7 +68,7 @@
 		"@typescript-eslint/eslint-plugin": "5.12.1",
 		"@typescript-eslint/parser": "5.12.1",
 		"@vue/compiler-sfc": "3.2.31",
-		"@yangzw/bruce-us": "^1.0.0",
+		"@yangzw/bruce-us": "1.0.0",
 		"babel-loader": "8.2.3",
 		"chalk": "5.0.0",
 		"chokidar": "3.5.3",
