--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,7 +29,7 @@
 		"npm": ">=6.9.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "^1.0.0",
+		"@yangzw/bruce-us": "1.0.0",
 		"axios": "0.26.0",
 		"classnames": "2.3.1",
 		"react": "17.0.2",
