--- a/packages/us/package.json
+++ b/packages/us/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-us",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"description": "A Web/Node General Util Set",
 	"keywords": [
 		"bruce-us",
@@ -47,7 +47,7 @@
 	"browser": "dist/web.umd.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "rollup -c",
+		"build": "rollup -c && rimraf dist/{src,test}",
 		"clean": "rimraf coverage dist node_modules package-lock.json yarn.lock",
 		"test": "jest --no-cache --watchAll --coverage"
 	},
@@ -56,24 +56,24 @@
 		"npm": ">=6.9.0"
 	},
 	"dependencies": {
-		"dayjs": "1.11.5",
+		"dayjs": "1.11.6",
 		"fs-extra": "10.1.0"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "22.0.2",
-		"@rollup/plugin-node-resolve": "14.0.1",
-		"@rollup/plugin-typescript": "8.5.0",
+		"@rollup/plugin-commonjs": "23.0.2",
+		"@rollup/plugin-node-resolve": "15.0.1",
+		"@rollup/plugin-typescript": "9.0.2",
 		"@types/fs-extra": "9.0.13",
-		"@types/jest": "29.0.0",
-		"@types/node": "18.7.16",
-		"jest": "29.0.2",
-		"rollup": "2.79.0",
+		"@types/jest": "29.2.3",
+		"@types/node": "18.11.9",
+		"jest": "29.3.1",
+		"rollup": "3.3.0",
 		"rollup-plugin-cleandir": "2.0.0",
-		"rollup-plugin-dts": "4.2.2",
+		"rollup-plugin-dts": "5.0.0",
 		"rollup-plugin-terser": "7.0.2",
-		"ts-jest": "28.0.8",
-		"tslib": "2.4.0",
-		"typescript": "4.8.3"
+		"ts-jest": "29.0.3",
+		"tslib": "2.4.1",
+		"typescript": "4.8.4"
 	},
 	"license": "MIT",
 	"publishConfig": {
