--- a/packages/us/package.json
+++ b/packages/us/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-us",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"description": "A Web/Node General Util Set",
 	"keywords": [
 		"bruce-us",
@@ -56,7 +56,7 @@
 		"npm": ">=6.9.0"
 	},
 	"dependencies": {
-		"axios": "1.2.6",
+		"axios": "1.3.4",
 		"dayjs": "1.11.7",
 		"fs-extra": "11.1.0"
 	},
@@ -68,14 +68,15 @@
 		"@rollup/plugin-typescript": "11.0.0",
 		"@types/fs-extra": "11.0.1",
 		"@types/jest": "29.4.0",
-		"@types/node": "18.11.18",
-		"jest": "29.4.1",
-		"rollup": "3.12.0",
+		"@types/node": "18.14.5",
+		"jest": "29.4.3",
+		"rollup": "3.18.0",
 		"rollup-plugin-cleandir": "2.0.0",
-		"rollup-plugin-dts": "5.1.1",
+		"rollup-plugin-dts": "5.2.0",
 		"ts-jest": "29.0.5",
 		"tslib": "2.5.0",
-		"typescript": "4.9.5"
+		"typescript": "4.9.5",
+		"yaml": "2.2.1"
 	},
 	"license": "MIT",
 	"publishConfig": {
