--- a/.github/workflows/cbd.yml
+++ b/.github/workflows/cbd.yml
@@ -1,9 +1,9 @@
 name: CBD # 动作名称
 
-on: # 触发条件：在push到pnpm-ts分支后
+on: # 触发条件：在push到main分支后
   push:
     branches:
-      - pnpm-ts
+      - main
 
 jobs: # 任务
   cbd: # 任务ID
