更新依赖版本

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"rebuild": "npm run clean && npm run init && npm run build && npm run mini"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-us": "1.1.3",
 		"terser": "5.24.0"
 	},
 	"devDependencies": {
