--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -64,9 +64,9 @@
 		"@babel/runtime-corejs3": "7.23.2",
 		"@vitejs/plugin-basic-ssl": "1.0.1",
 		"@vitejs/plugin-react": "4.1.0",
-		"@yangzw/bruce-std": "workspace:*",
-		"@yangzw/bruce-type": "workspace:*",
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-std": "1.1.3",
+		"@yangzw/bruce-type": "1.1.3",
+		"@yangzw/bruce-us": "1.1.3",
 		"babel-loader": "9.1.3",
 		"chalk": "5.3.0",
 		"commander": "11.1.0",
