--- a/packages/ico/package.json
+++ b/packages/ico/package.json
@@ -37,7 +37,7 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-us": "1.1.3",
 		"chalk": "5.3.0",
 		"chokidar": "3.5.3",
 		"commander": "11.1.0",
