--- a/packages/img/package.json
+++ b/packages/img/package.json
@@ -64,7 +64,7 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-us": "1.1.3",
 		"chalk": "5.3.0",
 		"commander": "11.1.0",
 		"figures": "6.0.1",
