--- a/packages/pkg/package.json
+++ b/packages/pkg/package.json
@@ -38,7 +38,7 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-us": "1.1.3",
 		"chalk": "5.3.0",
 		"commander": "11.1.0",
 		"enquirer": "2.4.1",
