--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -46,7 +46,7 @@
 		"@babel/preset-react": "7.22.15",
 		"@typescript-eslint/eslint-plugin": "6.9.1",
 		"@typescript-eslint/parser": "6.9.1",
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-us": "1.1.3",
 		"chalk": "5.3.0",
 		"clipboardy": "4.0.0",
 		"commander": "11.1.0",
