--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
 		"clean": "npm run clean:module && npm run clean:output",
 		"clean:module": "rimraf packages/us/node_modules && rimraf node_modules pnpm-lock.yaml && pnpm recursive exec -- rimraf node_modules pnpm-lock.yaml",
 		"clean:output": "pnpm recursive exec -- rimraf coverage dist",
+		"commit": "git add --all . && git-cz",
 		"init": "pnpm i -r",
 		"mini": "ts-node-esm tasks/mini.ts && pnpm recursive exec -- npm run mount",
 		"rebuild": "npm run clean && npm run init && npm run build && npm run mini"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "1.1.4",
+		"@yangzw/bruce-us": "workspace:*",
 		"terser": "5.24.0"
 	},
 	"devDependencies": {
-		"@types/node": "20.8.10",
+		"@types/node": "20.9.0",
 		"ts-node": "10.9.1",
 		"typescript": "5.2.2"
 	},
 	"private": true,
 	"workspaces": [
 		"packages/*"
-	]
+	],
+	"config": {
+		"cz-customizable": {
+			"config": "czrc.cjs"
+		}
+	}
 }
