--- a/packages/ico/package.json
+++ b/packages/ico/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-ico",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"description": "An Icon Processing Tool For Generating Css Icons Based On Css Background And Mask",
 	"keywords": [
 		"bruce-ico",
@@ -37,7 +37,7 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "1.1.4",
+		"@yangzw/bruce-us": "workspace:*",
 		"chalk": "5.3.0",
 		"chokidar": "3.5.3",
 		"commander": "11.1.0",
@@ -48,9 +48,9 @@
 		"semver": "7.5.4"
 	},
 	"devDependencies": {
-		"@types/mime-types": "2.1.3",
-		"@types/node": "20.8.10",
-		"@types/semver": "7.5.4",
+		"@types/mime-types": "2.1.4",
+		"@types/node": "20.9.0",
+		"@types/semver": "7.5.5",
 		"nodemon": "3.0.1",
 		"typescript": "5.2.2"
 	},
