--- a/packages/img/package.json
+++ b/packages/img/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-img",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"description": "A Image Processing Tool For Multifunctional And Unrestricted",
 	"keywords": [
 		"bruce-img",
@@ -64,7 +64,7 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "1.1.4",
+		"@yangzw/bruce-us": "workspace:*",
 		"chalk": "5.3.0",
 		"commander": "11.1.0",
 		"figures": "6.0.1",
@@ -76,7 +76,7 @@
 		"imagemin-pngquant": "9.0.2",
 		"imagemin-svgo": "10.0.1",
 		"imagemin-webp": "8.0.0",
-		"inquirer": "9.2.11",
+		"inquirer": "9.2.12",
 		"is-animated": "2.0.2",
 		"ora": "7.0.1",
 		"semver": "7.5.4",
@@ -85,15 +85,15 @@
 	},
 	"devDependencies": {
 		"@types/glob": "8.1.0",
-		"@types/imagemin": "8.0.3",
-		"@types/imagemin-gifsicle": "7.0.3",
-		"@types/imagemin-jpegtran": "5.0.3",
-		"@types/imagemin-svgo": "10.0.4",
-		"@types/imagemin-webp": "7.0.2",
-		"@types/inquirer": "9.0.6",
-		"@types/node": "20.8.10",
-		"@types/semver": "7.5.4",
-		"@types/text-to-svg": "3.1.3",
+		"@types/imagemin": "8.0.4",
+		"@types/imagemin-gifsicle": "7.0.4",
+		"@types/imagemin-jpegtran": "5.0.4",
+		"@types/imagemin-svgo": "10.0.5",
+		"@types/imagemin-webp": "7.0.3",
+		"@types/inquirer": "9.0.7",
+		"@types/node": "20.9.0",
+		"@types/semver": "7.5.5",
+		"@types/text-to-svg": "3.1.4",
 		"nodemon": "3.0.1",
 		"typescript": "5.2.2"
 	},
