--- a/packages/pkg/package.json
+++ b/packages/pkg/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-pkg",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"description": "A Package Processing Tool For Strengthening NPM Command",
 	"keywords": [
 		"bruce-pkg",
@@ -38,21 +38,21 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "1.1.4",
+		"@yangzw/bruce-us": "workspace:*",
 		"chalk": "5.3.0",
 		"commander": "11.1.0",
 		"enquirer": "2.4.1",
 		"execa": "8.0.1",
 		"figures": "6.0.1",
-		"inquirer": "9.2.11",
+		"inquirer": "9.2.12",
 		"listr2": "6.6.1",
 		"ora": "7.0.1",
 		"semver": "7.5.4"
 	},
 	"devDependencies": {
-		"@types/inquirer": "9.0.6",
-		"@types/node": "20.8.10",
-		"@types/semver": "7.5.4",
+		"@types/inquirer": "9.0.7",
+		"@types/node": "20.9.0",
+		"@types/semver": "7.5.5",
 		"nodemon": "3.0.1",
 		"typescript": "5.2.2"
 	},
