--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-std",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"description": "A VSCode Configuration Tool Integrating Stylelint And Eslint",
 	"keywords": [
 		"bruce-std",
@@ -41,21 +41,21 @@
 		"npm": ">=7.10.0"
 	},
 	"dependencies": {
-		"@babel/core": "7.23.2",
-		"@babel/eslint-parser": "7.22.15",
-		"@babel/preset-react": "7.22.15",
-		"@typescript-eslint/eslint-plugin": "6.9.1",
-		"@typescript-eslint/parser": "6.9.1",
-		"@yangzw/bruce-us": "1.1.4",
+		"@babel/core": "7.23.3",
+		"@babel/eslint-parser": "7.23.3",
+		"@babel/preset-react": "7.23.3",
+		"@typescript-eslint/eslint-plugin": "6.10.0",
+		"@typescript-eslint/parser": "6.10.0",
+		"@yangzw/bruce-us": "workspace:*",
 		"chalk": "5.3.0",
 		"clipboardy": "4.0.0",
 		"commander": "11.1.0",
-		"eslint": "8.52.0",
+		"eslint": "8.53.0",
 		"eslint-config-standard": "17.1.0",
 		"eslint-config-standard-with-typescript": "39.1.1",
 		"eslint-plugin-html": "7.1.0",
 		"eslint-plugin-import": "2.29.0",
-		"eslint-plugin-n": "16.2.0",
+		"eslint-plugin-n": "16.3.1",
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-react": "7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
@@ -74,9 +74,9 @@
 		"vue-eslint-parser": "9.3.2"
 	},
 	"devDependencies": {
-		"@types/eslint": "8.44.6",
-		"@types/node": "20.8.10",
-		"@types/semver": "7.5.4",
+		"@types/eslint": "8.44.7",
+		"@types/node": "20.9.0",
+		"@types/semver": "7.5.5",
 		"nodemon": "3.0.1",
 		"typescript": "5.2.2"
 	},
