--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,7 +46,7 @@
 		"npm": ">=6.9.0"
 	},
 	"dependencies": {
-		"@yangzw/bruce-us": "workspace:*",
+		"@yangzw/bruce-us": "1.1.5",
 		"classnames": "2.3.2",
 		"disable-scroll": "0.6.0",
 		"react": "18.2.0",
