--- a/packages/img/package.json
+++ b/packages/img/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-img",
-	"version": "1.3.2",
+	"version": "1.3.3",
 	"description": "An image processing tool that multifunctional and unrestricted",
 	"keywords": [
 		"bruce-img",
@@ -65,12 +65,13 @@
 		"npm": ">=9.8.1"
 	},
 	"dependencies": {
-		"@inquirer/prompts": "5.0.7",
+		"@inquirer/prompts": "5.3.6",
 		"@yangzw/bruce-us": "workspace:*",
 		"chalk": "5.3.0",
 		"commander": "12.1.0",
 		"figures": "6.1.0",
-		"glob": "10.4.2",
+		"file-type": "19.3.0",
+		"glob": "11.0.0",
 		"image-size": "1.1.1",
 		"imagemin": "9.0.0",
 		"imagemin-gifsicle": "7.0.0",
@@ -80,7 +81,7 @@
 		"imagemin-webp": "8.0.0",
 		"is-animated": "2.0.2",
 		"ora": "8.0.1",
-		"semver": "7.6.2",
+		"semver": "7.6.3",
 		"sharp": "0.33.4",
 		"text-to-svg": "3.1.5"
 	},
@@ -90,11 +91,11 @@
 		"@types/imagemin-jpegtran": "5.0.4",
 		"@types/imagemin-svgo": "10.0.5",
 		"@types/imagemin-webp": "7.0.3",
-		"@types/node": "20.14.9",
+		"@types/node": "22.0.2",
 		"@types/semver": "7.5.8",
 		"@types/text-to-svg": "3.1.4",
 		"nodemon": "3.1.4",
-		"typescript": "5.5.2"
+		"typescript": "5.5.4"
 	},
 	"license": "MIT",
 	"publishConfig": {
