--- a/packages/lng/package.json
+++ b/packages/lng/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@yangzw/bruce-lng",
-	"version": "1.3.2",
+	"version": "1.3.3",
 	"description": "A language processing tool that facilitates the management of multilingual texts",
 	"keywords": [
 		"bruce-lng",
@@ -52,20 +52,22 @@
 		"npm": ">=9.8.1"
 	},
 	"dependencies": {
-		"@inquirer/prompts": "5.0.7",
+		"@inquirer/prompts": "5.3.6",
 		"@yangzw/bruce-us": "workspace:*",
 		"chalk": "5.3.0",
 		"commander": "12.1.0",
 		"exceljs": "4.4.0",
 		"figures": "6.1.0",
 		"ora": "8.0.1",
-		"semver": "7.6.2"
+		"semver": "7.6.3",
+		"voca": "1.4.1"
 	},
 	"devDependencies": {
-		"@types/node": "20.14.9",
+		"@types/node": "22.0.2",
 		"@types/semver": "7.5.8",
+		"@types/voca": "1.4.6",
 		"nodemon": "3.1.4",
-		"typescript": "5.5.2"
+		"typescript": "5.5.4"
 	},
 	"license": "MIT",
 	"private": true,
